<resources>
    <string name="app_name">Ally</string>
    <string name="action_settings">Settings</string>
    <string name="alarm_lmon">Mon</string>
    <string name="alarm_ltue">Tue</string>
    <string name="alarm_lwed">Wed</string>
    <string name="alarm_lthurs">Thurs</string>
    <string name="alarm_lfri">Fri</string>
    <string name="alarm_lsat">Sat</string>
    <string name="alarm_lsun">Sun</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="delete">Delete</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="title_activity_alarm_activity">Ally Alarm</string>

    <string name="alarm_row_time">%1$s:%2$s %3$s</string>

    <string name="sleep_genius_about">Sleep Genius is a tool that allows you to optimize your sleep schedule based on your sleep cycles. It is important to be wary of the REM phase, which is near the end of a sleep cycle. A complete sleep cycle lasts roughly 90 minutes. The REM phase is when dreaming occurs, and memory is exercised on the brain. It is recommended to complete the full sleep cycle, and adults typically require four to five sleep cycles, although it varies. \nYou will feel very refreshed and might even wake up just before you need to!</string>
    <string name="sleep_genius_summary">This calculator optimizes the amount of sleep you need.</string>

    <string name="sleep_genius_title">Sleep Genius</string>
    <string name="sleep_genius_wakeup_opt1">Wake up at %1$s:%2$s %3$s</string>
    <string name="sleep_genius_wakeup_opt2">Fall asleep in _ minutes.</string>
    <string name="difficulty">Difficulty</string>
    <string name="category">Category</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
</resources>