<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="addAlarmViewModel" type="com.allydev.ally.viewmodels.AddAlarmViewModel"/>
    </data>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".fragments.AddAlarm">

            <TimePicker
                    android:id="@+id/alarmTimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:timePickerMode="spinner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:focusable="false"
                    android:textColor="@{addAlarmViewModel.daysSet.contains(addAlarmViewModel.days.mon) ? @color/selectedText : @color/black }"
                    android:text="@string/alarm_lmon"
                    android:id="@+id/mon" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/alarmTimePicker"
                    app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:focusable="false"
                    android:text="@string/alarm_ltue"
                    android:id="@+id/tue"
                    app:layout_constraintStart_toEndOf="@+id/mon" android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp" app:layout_constraintTop_toTopOf="@+id/mon"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:focusable="false"
                    android:text="@string/alarm_lwed"
                    android:id="@+id/wed"
                    app:layout_constraintStart_toEndOf="@+id/tue" android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp" app:layout_constraintTop_toTopOf="@+id/tue"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:focusable="false"
                    android:text="@string/alarm_lthurs"
                    android:id="@+id/thurs" app:layout_constraintStart_toEndOf="@+id/wed"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp" app:layout_constraintTop_toTopOf="@+id/wed"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:focusable="false"
                    android:text="@string/alarm_lfri"
                    android:id="@+id/fri" app:layout_constraintStart_toEndOf="@+id/thurs"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp" app:layout_constraintTop_toTopOf="@+id/thurs"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:focusable="false"
                    android:text="@string/alarm_lsat"
                    android:id="@+id/sat" app:layout_constraintStart_toEndOf="@+id/fri" android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp" app:layout_constraintTop_toTopOf="@+id/fri"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:focusable="false"
                    android:text="@string/alarm_lsun"
                    android:id="@+id/sun" app:layout_constraintStart_toEndOf="@+id/sat" android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp" app:layout_constraintTop_toTopOf="@+id/sat"/>
            <!--android:text="Tomorrow"-->

            <TextView
                    android:id="@+id/dateHolder"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sun"
                    app:layout_constraintVertical_bias="1.0"
                    tools:layout_editor_absoluteX="0dp" />

            <TextView
                    android:id="@+id/dateText"
                    android:textSize="24sp"
                    android:textColor="@color/colorGray"
                    android:gravity="center_vertical"
                    android:text="Tomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"
                    app:layout_constraintTop_toTopOf="@+id/dateHolder"/>

<!--            <TextView-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="0dp"-->
<!--                    android:id="@+id/bgGenius"-->
<!--                    android:background="@color/colorPrimary"-->
<!--                    app:layout_constraintTop_toTopOf="@+id/textView"-->
<!--                    app:layout_constraintBottom_toBottomOf="@+id/textView"-->
<!--                    app:layout_constraintStart_toStartOf="@+id/dateHolder"-->
<!--                    app:layout_constraintEnd_toEndOf="@+id/dateHolder"-->
<!--            />-->

<!--            <ImageView-->
<!--                    android:src="@drawable/blue_question_mark"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="0dp"-->
<!--                    android:adjustViewBounds="true" android:id="@+id/genius_about"-->
<!--                    app:layout_constraintBottom_toBottomOf="@+id/bgGenius"-->
<!--                    app:layout_constraintTop_toTopOf="@+id/bgGenius"-->
<!--                    app:layout_constraintEnd_toEndOf="@+id/bgGenius" android:layout_marginEnd="25dp"-->
<!--                    android:layout_marginRight="25dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"/>-->

<!--            <TextView-->
<!--                    android:gravity="center_vertical"-->
<!--                    android:text="Sleep Genius"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:textSize="28sp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/textView"-->
<!--                    android:textColor="@color/selectedText"-->
<!--                    android:layout_marginLeft="50dp"-->
<!--                    android:layout_marginStart="50dp"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/dateText" android:layout_marginTop="5dp"/>-->


    <Button
            android:text="CREATE"
            app:icon="@drawable/ic_add_24dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/add" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
